--- a/4_induced_fit/adaptive.conf
+++ b/4_induced_fit/adaptive.conf
@@ -1,45 +1,86 @@
 {
+
     "generalParams" : {
+
         "restart": true,
+
         "debug" : false,
-        "outputPath":"output",
-       "initialStructures" : ["inputs/*.pdb"],
+
+        "outputPath":"output/",
+
+        "initialStructures" : ["input.pdb"],
+
         "writeAllClusteringStructures": false
+
     },
 
     "spawning" : {
-       "type" : "inverselyProportional",
+
+        "type" : "inverselyProportional",
+
         "params" : {
+
             "reportFilename" : "run_report",
+
             "T":1000
-    },
-        "density" :{
-            "type": "continuous"
-        }
-    },
-    "simulation": {
-        "type" : "pele",
-        "params" : {
-            "iterations" : 100,
-            "peleSteps" : 4,
-            "processors" : 250,
-            "seed": 123456,
-            "controlFile" : "pele.conf"
-        }
-    },
-    "clustering" : {
-        "type" : "rmsd",
-        "params" : {
-           "ligandResname" : "JNJ",
-           "contactThresholdDistance" : 8
+
         },
-        "thresholdCalculator" : {
-          "type" : "heaviside",
-          "params" : {
-              "values" : [2.5, 5, 10],
-              "conditions": [1, 0.6, 0.0]
-            }
+
+        "density" :{
+
+            "type": "null"
+
         }
+
+    },
+
+    "simulation": {
+
+        "type" : "pele",
+
+        "params" : {
+
+            "iterations" : 30,
+
+            "processors" : 64,
+
+            "peleSteps" : 12,
+
+            "seed": 123456,
+
+            "controlFile" : "pele.conf"
+
+        }
+
+    },
+
+    "clustering" : {
+
+        "type" : "rmsd",
+
+        "params" : {
+
+           "ligandResname" : "AGO",
+
+           "contactThresholdDistance" : 8
+
+        },
+
+        "thresholdCalculator" : {
+
+          "type" : "heaviside",
+
+          "params" : {
+
+              "values" : [2, 3, 5, 7],
+
+              "conditions": [1.0, 0.75, 0.5]
+
+            }
+
+        }
+
     }
+
 }
 
