--- a/1_bias_exploration/adaptive.conf
+++ b/1_bias_exploration/adaptive.conf
@@ -1,45 +1,82 @@
 {
+
     "generalParams" : {
+
         "restart": true,
+
         "debug" : false,
+
         "outputPath":"output",
-       "initialStructures" : ["inputs/*.pdb"],
+
+        "initialStructures" : ["input.pdb"],
+
         "writeAllClusteringStructures": false
+
     },
 
+
     "spawning" : {
-       "type" : "inverselyProportional",
+        "type" : "epsilon",
         "params" : {
             "reportFilename" : "run_report",
+            "metricColumnInReport" : 5,
+            "epsilon": 0.25,
             "T":1000
     },
+
         "density" :{
-            "type": "continuous"
+
+            "type": "null"
+
         }
+
     },
+
     "simulation": {
         "type" : "pele",
         "params" : {
-            "iterations" : 100,
-            "peleSteps" : 4,
-            "processors" : 250,
+
+            "iterations" : 30,
+
+            "peleSteps" : 8,
+ 
+            "processors" : 64,
+
             "seed": 123456,
+
             "controlFile" : "pele.conf"
+
         }
+
     },
+
     "clustering" : {
+
         "type" : "rmsd",
+
         "params" : {
-           "ligandResname" : "JNJ",
+
+           "ligandResname" : "CGC",
+
            "contactThresholdDistance" : 8
+
         },
+
         "thresholdCalculator" : {
+
           "type" : "heaviside",
+
           "params" : {
-              "values" : [2.5, 5, 10],
-              "conditions": [1, 0.6, 0.0]
+
+              "values" : [1.5, 2, 5],
+
+              "conditions": [1.2, 0.8, 0.0]
+
             }
+
         }
+
     }
+
 }
 
