Update on global exploration control file

--- a/0_global_exploration/pele.conf
+++ b/0_global_exploration/pele.conf
@@ -4,7 +4,7 @@
         "allowMissingTerminals": true,
         "ForceField" : "OPLS2005",
         "MultipleComplex" : [ $COMPLEXES ],
-        "Solvent" : { "ionicStrength" : 0.15, "solventType" : "OBC", "useDebyeLength" : true } 
+        "Solvent" : { "ionicStrength" : 0.15, "solventType" : "VDGBNP", "useDebyeLength" : true }
     },
     "commands" : [{
         "commandType" : "peleSimulation", 
@@ -30,6 +30,11 @@
     $CONSTRAINTS
 
     "Perturbation": { 
+    "Box" : {
+         "radius" : 46,
+         "fixedCenter": [ -21.535960313893764, -1.0686535477673194, -20.884374724365887],
+         "type" : "sphericalBox"
+     },
     "perturbationType":"naive",
     "translationDirection": "steered", 
     "rotationAngles": "nonCoupled", 
