Update control files

--- a/2_bias_exploration/pele.conf
+++ b/2_bias_exploration/pele.conf
@@ -33,7 +33,7 @@
 
     "Perturbation": { 
                 "Box" : {
-                     "radius" : 17,
+                     "radius" : 10,
                      "fixedCenter": [ -67.4, -10.4, -42.6],
                      "type" : "sphericalBox"
                  },
@@ -43,6 +43,7 @@
     "translationDirection": "steered", 
     "rotationAngles": "nonCoupled", 
     "parameters": { 
+        "numberOfStericTrials": 50, 
         "steeringUpdateFrequency": 1,
         "overlapFactor": 0.60
     }
@@ -101,24 +102,23 @@
                  ],
 
                 "parametersChanges" : [
+                        {
+                           "ifAnyIsTrue": [ "rand2 >= 0.5" ],
+                            "doThesechanges": {     "Perturbation::parameters": { "rotationScalingFactor": 0.1 } },
+                            "otherwise": {"Perturbation::parameters": { "rotationScalingFactor": 0.2 } }
+                        },
                         {  "ifAnyIsTrue": [ "rand >= 0.5" ],
                             "doThesechanges": {  "Perturbation::parameters": { "translationRange": 2.0 } },
                             "otherwise": {  "Perturbation::parameters": { "translationRange": 1.0 } }
                         },
                         {  "ifAnyIsTrue": [ "rand1 >= 0.5" ],
-                            "doThesechanges": {  "Perturbation::parameters": { "steeringUpdateFrequency": 0, "numberOfTrials": 30 } },
-                            "otherwise": {  "Perturbation::parameters": { "steeringUpdateFrequency": 1 , "numberOfTrials": 10  }}
+                            "doThesechanges": {  "Perturbation::parameters": { "steeringUpdateFrequency": 0, "numberOfTrials": 20 } },
+                            "otherwise": {  "Perturbation::parameters": { "steeringUpdateFrequency": 1 , "numberOfTrials": 6  }}
                         },
                         {
-    "ifAnyIsTrue": [ "sasaLig >= 0.25" ],
-                             "doThesechanges": { "Perturbation::parameters": { "steeringUpdateFrequency": 2, "translationRange": 3.0, "numberOfTrials": 10 } },
+    "ifAnyIsTrue": [ "sasaLig >= 0.85" ],
+                             "doThesechanges": { "Perturbation::parameters": { "translationRange": 3.0 } },
                              "otherwise": {}
-                        },
-                        {
-   "ifAnyIsTrue": [ "rand2 >= 0.5" ],
-                            "doThesechanges": {     "Perturbation::parameters": { "rotationScalingFactor": 0.1 } },
-                            "otherwise": {
-                                "Perturbation::parameters": { "rotationScalingFactor": 0.2 } }
                         }
                   ]
             }
