Add anm configuration

--- a/4_anm/anm.conf
+++ b/4_anm/anm.conf
@@ -23,7 +23,7 @@
             "sideChainPredictionRegionRadius" : 5, 
             "perturbationCOMConstraintConstant" : 0.5, 
             "activateProximityDetection": true, 
-            "temperature": 150000, 
+            "temperature": 1500, 
             "numberOfPeleSteps": 1000
         },  
 
@@ -41,17 +41,17 @@
            }
         },
         "options" : {
-           "directionGeneration" : "random",
-           "modesMixingOption" : "mixMainModeWithOthersModes",
-           "pickingCase" : "RANDOM_MODE"
+           "directionGeneration" : "oscillate",
+           "modesMixingOption" : "doNotMixModes",
+           "pickingCase" : "LOWEST_MODE"
         },
         "parameters" : {
-           "displacementFactor" : 1.75,
+           "displacementFactor" : 2.15,
            "eigenUpdateFrequency" : 1000000,
            "mainModeWeightForMixModes" : 0.75,
-           "modesChangeFrequency" : 3,
-           "numberOfModes": 6,
-           "relaxationSpringConstant" : 0.5
+           "modesChangeFrequency" : 5,
+           "numberOfModes": 1,
+           "relaxationSpringConstant" : 0.75
         }
      },
      "SideChainPrediction" : {
