--- a/4_anm/pele.conf
+++ b/4_anm/pele.conf
@@ -1,6 +1,6 @@
 {
     "licenseDirectoryPath": "/home/ywest/", 
-    "simulationLogPath" : "results/logFile.txt",
+    "simulationLogPath" : "$OUTPUT_PATH/logFile.txt",
     "Initialization" : {
         "allowMissingTerminals": true,
         "ForceField" : "OPLS2005",
@@ -9,12 +9,12 @@
     },
     "commands" : [{
         "commandType" : "peleSimulation", 
-        "RandomGenerator" : { "seed" : 323231 }, 
+        "RandomGenerator" : { "seed" : $SEED }, 
         "PELE_Output" : { 
             "savingFrequencyForAcceptedSteps" : 1, 
             "savingMode" : "savingTrajectory", 
-            "reportPath" : "results/run_report",
-            "trajectoryPath" : "results/run_trajectory.pdb"
+            "reportPath" : "$OUTPUT_PATH/run_report",
+            "trajectoryPath" : "$OUTPUT_PATH/run_trajectory.pdb"
         },
         "PELE_Parameters" : { 
             "anmFrequency" : 1, 
@@ -24,7 +24,7 @@
             "perturbationCOMConstraintConstant" : 0.5, 
             "activateProximityDetection": true, 
             "temperature": 1500, 
-            "numberOfPeleSteps": 1000
+            "numberOfPeleSteps": $PELE_STEPS
         },  
 
 
